I think this will do for now.

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -178,7 +178,9 @@
               <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
               <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
             </form>
-            <p><i class="fa fa-envelope"> </i> Or feel free to email us directly at <a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a><br></p>
+            <p></p>
+            <p></p>
+            <p><i class="fa fa-envelope"> </i><a href="mailto:walkingstalkingrobots@gmail.com"><ul>walkingstalkingrobots@gmail.com</ul></a><br></p>
       </div>
       <p><u>TOP</u></p>
     </a>
