--- a/website/index.html
+++ b/website/index.html
@@ -180,7 +180,7 @@
             </form>
             <p></p>
             <p></p>
-            <p><i class="fa fa-envelope"> </i><a href="mailto:walkingstalkingrobots@gmail.com"><ul>walkingstalkingrobots@gmail.com</ul></a><br></p>
+            <p><i class="fa fa-envelope"> </i><a href="mailto:walkingstalkingrobots@gmail.com"><u>walkingstalkingrobots@gmail.com</u></a><br></p>
       </div>
       <p><u>TOP</u></p>
     </a>
