--- a/website/homePage.html
+++ b/website/homePage.html
@@ -182,6 +182,8 @@
             <p></p>
             <p><i class="fa fa-envelope"> </i><a href="mailto:walkingstalkingrobots@gmail.com">  <u>walkingstalkingrobots@gmail.com</u></a><br></p>
       </div>
+      <p></p>
+      <a href="homePage.html">
       <p><u>TOP</u></p>
     </a>
   </div>
