--- a/website/homePage.html
+++ b/website/homePage.html
@@ -163,7 +163,7 @@
   
   <!-- The Contact Section -->
   <div class='contact' id="contact">
-      <div class="w3-container w3-content" style="max-width:800px" id="contact">
+      <div class="w3-container w3-content" style="max-width:800px">
         <h2>CONTACT</h2>
         <p><i>Feel Free To Reach Out</i></p>
             <form name="contact" method="POST" data-netlify="true">
