--- a/website/index.html
+++ b/website/index.html
@@ -162,7 +162,9 @@
   </div>
   
   <!-- The Contact Section -->
-  <div class='contact' id="contact">
+   <div id="contact"></div>
+   </div>
+  <div class='contact'>
       <div class="w3-container w3-content" style="max-width:800px">
         <h2>CONTACT</h2>
         <p><i>Feel Free To Reach Out</i></p>
