Changeing the image links back to local links.

--- a/website/index.html
+++ b/website/index.html
@@ -21,10 +21,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Hide this line for IE (needed for Firefox and others) -->
   <![if !IE]>
-  <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
+  <link rel="icon" href="images/wsr.jpg" type="image/x-icon" />
   <![endif]>
   <!-- This is needed for IE -->
-  <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
+  <link rel="shortcut icon" href="images/wsr.jpg" type="image/ico" />
 
 </head>
 
@@ -60,7 +60,7 @@
 
       <div class="item active">
         <img
-          src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
+          src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
         <div class="carousel-caption">
