--- a/website/homePage.html
+++ b/website/homePage.html
@@ -21,10 +21,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Hide this line for IE (needed for Firefox and others) -->
   <![if !IE]>
-  <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
+  <link rel="icon" href="images/wsr.jpg" type="image/x-icon" />
   <![endif]>
   <!-- This is needed for IE -->
-  <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
+  <link rel="shortcut icon" href="images/wsr.jpg" type="image/ico" />
 
 </head>
 
@@ -60,7 +60,7 @@
 
       <div class="item active">
         <img
-          src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
+          src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
         <div class="carousel-caption">
@@ -71,7 +71,7 @@
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
+        <img src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
         <div class="carousel-caption">
@@ -83,7 +83,7 @@
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_house_show.jpeg"
+        <img src="img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
         <div class="carousel-caption">
@@ -92,7 +92,7 @@
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
+        <img src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
         <div class="carousel-caption">
@@ -116,9 +116,7 @@
     </a>
   </div>
 
-  <div id="music">
-  </div>
-  <div class='music'>
+  <div class='music' id="music">
     <h2>Music</h2>
     <div class='links'>
       <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img
@@ -143,9 +141,7 @@
     </a>
   </div>
 
-  <div id="shows">
-  </div>
-  <div class='learn-more'>
+  <div id='shows' class='learn-more'>
     <h2>Shows</h2>
     <div class='links'>
       <a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank">
@@ -162,9 +158,7 @@
   </div>
   
   <!-- The Contact Section -->
-   <div id="contact"></div>
-   </div>
-  <div class='contact'>
+  <div class='contact' id="contact">
       <div class="w3-container w3-content" style="max-width:800px">
         <h2>CONTACT</h2>
         <p><i>Feel Free To Reach Out</i></p>
@@ -184,14 +178,14 @@
             <p></p>
             <p><i class="fa fa-envelope"> </i><a href="mailto:walkingstalkingrobots@gmail.com">  <u>walkingstalkingrobots@gmail.com</u></a><br></p>
       </div>
-      <p></p>
-      <a href="homePage.html">
-      <p><u>TOP</u></p>
-    </a>
   </div>
 
 
-  <div class="footer">
+  <div class="footer" id="footer">
+    <p></p>
+    <a href="homePage.html">
+    <p><u>TOP</u></p>
+  </a>
     <p> &copy; Walking Stalking Robots. 2014 - <span id="currentYear"></span></p>
   </div>
 
