--- a/website/homePage.html
+++ b/website/homePage.html
@@ -58,8 +58,8 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
 
-      <div class="item active">
-        <img
+      <div class="item active" itemscope itemtype=https://schema.org/Person>
+        <img itemprop="image"
           src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
@@ -70,8 +70,8 @@
         </div>
       </div>
 
-      <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
+      <itemscope itemtype=https://schema.org/Person>
+        <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
         <div class="carousel-caption">
@@ -82,8 +82,8 @@
         </div>
       </div>
 
-      <div class="item">
-        <img src="img/walking_stalking_robots_house_show.jpeg"
+      <itemscope itemtype=https://schema.org/Person>
+        <img itemprop="image" src="img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
         <div class="carousel-caption">
@@ -91,8 +91,8 @@
         </div>
       </div>
 
-      <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
+      <itemscope itemtype=https://schema.org/Person>
+        <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
         <div class="carousel-caption">
