--- a/website/index.html
+++ b/website/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <itemscope itemtype=https://schema.org/Person>
+      <div itemscope itemtype=https://schema.org/Person>
         <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <itemscope itemtype=https://schema.org/Person>
+      <div itemscope itemtype=https://schema.org/Person>
         <img itemprop="image" src="img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <itemscope itemtype=https://schema.org/Person>
+      <div itemscope itemtype=https://schema.org/Person>
         <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
