--- a/website/homePage.html
+++ b/website/homePage.html
@@ -21,10 +21,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Hide this line for IE (needed for Firefox and others) -->
   <![if !IE]>
-  <link rel="icon" href="images/wsr.jpg" type="image/x-icon" />
+  <link rel="icon" href="img/wsr.jpg" type="image/x-icon" />
   <![endif]>
   <!-- This is needed for IE -->
-  <link rel="shortcut icon" href="images/wsr.jpg" type="image/ico" />
+  <link rel="shortcut icon" href="img/wsr.jpg" type="image/ico" />
 
 </head>
 
