Lower the P so that google can find it better for the SEO

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -36,7 +36,7 @@
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Stuff</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="https://walkingstalkingrobots.com/homePage.html">Home</a>
+            <a href="https://walkingstalkingrobots.com/homepage.html">Home</a>
             <a href="https://walkingstalkingrobots.com/#music">Music</a>
             <a href="https://walkingstalkingrobots.com/#shows">Shows</a>
             <a href="https://walkingstalkingrobots.com/#contact">Contact</a>
@@ -136,7 +136,7 @@
       <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"><img src="img/icon_bandcamp.png"
           id="MusicStream" alt="Bandcamp Logo." /></a>
     </div>
-    <a href="homePage.html">
+    <a href="homepage.html">
       <p><u>TOP</u></p>
     </a>
   </div>
@@ -151,7 +151,7 @@
         <!-- Here lies the last show we played. May it rest in rock heaven... I hope I get to go to rock heaven... Sounds pretty cool... -->
         <!-- <a href="https://www.instagram.com/shanghaitunnelbar/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
     </div>
-    <a href="homePage.html">
+    <a href="homepage.html">
       <p><u>TOP</u></p>
     </a>
   </div>
@@ -183,7 +183,7 @@
 
   <div class="footer" id="footer">
     <p></p>
-    <a href="homePage.html">
+    <a href="homepage.html">
     <p><u>TOP</u></p>
   </a>
     <p> &copy; Walking Stalking Robots. 2014 - <span id="currentYear"></span></p>
