Al...most....there.....

--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,7 @@
 
       <div class="item active" itemscope itemtype=https://schema.org/Person>
         <img itemprop="image"
+          id="image"
           src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
@@ -70,7 +71,9 @@
       </div>
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
-        <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
+        <img itemprop="image" 
+          id="image"
+          src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
         <div class="carousel-caption">
@@ -82,7 +85,9 @@
       </div>
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
-        <img itemprop="image" src="img/walking_stalking_robots_house_show.jpeg"
+        <img itemprop="image"
+          id="image"
+          src="img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
         <div class="carousel-caption">
@@ -91,7 +96,9 @@
       </div>
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
-        <img itemprop="image" src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
+        <img itemprop="image"
+          id="image" 
+          src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
         <div class="carousel-caption">
