Lets try this again...

--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,7 @@
 
       <div class="item active" itemscope itemtype=https://schema.org/Person>
         <img itemprop="image"
+          class="image"
           src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
@@ -71,6 +72,7 @@
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
         <img itemprop="image" 
+          class="image"
           src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
@@ -84,6 +86,7 @@
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
         <img itemprop="image"
+          class="image"
           src="img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
@@ -94,6 +97,7 @@
 
       <div class="item" itemscope itemtype=https://schema.org/Person>
         <img itemprop="image"
+          class="image"
           src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
