Moved the year to the bottom for a better look on mobile

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -192,7 +192,8 @@
     <a href="homepage.html">
     <p><u>TOP</u></p>
   </a>
-    <p> &copy; Walking Stalking Robots (Tarl Heddleston, Paul Hubbard and Scott Warner). 2014 - <span id="currentYear"></span></p>
+    <p> &copy; Walking Stalking Robots (Tarl Heddleston, Paul Hubbard and Scott Warner). </p>
+    <p>2014 - <span id="currentYear"></span></p>
   </div>
 
 
